fixed overflow in homeNewsroom

--- a/Web-Frontend/src/assets/styling/_homeNewsroom.scss
+++ b/Web-Frontend/src/assets/styling/_homeNewsroom.scss
@@ -1,5 +1,6 @@
 .home-newsroom {
     background: #F7F9FC;
+    overflow-x: hidden;
 
     .home-newsroom-content {
         padding: 166px 0px;
